...
              showSearch(context: context, delegate: SearchUser());
            },
            icon: const Icon(Icons.search_sharp),
          )
        ],
      ),
      drawer: Container(
        width: MediaQuery.of(context).size.width * 0.5,
        padding: const EdgeInsets.only(top: 100),
        color: Colors.cyan[200],
        // backgroundColor: const Color.fromARGB(255, 70, 172, 255),
        child: RotatedBox(
          key: const Key('drawer'),
...
          child: ListView(
            children: [
              ListTile(
                leading: const Icon(
                  Icons.home,
                ),
                title: const Text('Home'),
                onTap: () {
                  Navigator.pop(context);
                },
              ),
              ListTile(
                leading: const Icon(
...
